--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,12 @@ dependencies:
   lottie: ^3.1.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
 
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
   flutter_test:
     sdk: flutter
@@ -55,13 +58,4 @@ flutter:
      - family: Poppins
        fonts:
          - asset: assets/fonts/Poppins-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+
