--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
 
   flutter_test:
     sdk: flutter
@@ -59,3 +60,7 @@ flutter:
        fonts:
          - asset: assets/fonts/Poppins-Regular.ttf
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo_icon.jpg"
